SERVER-81379 Respect `collectionUUID` for time-series write commands